<resources>
    <string name="app_name">Settle The Score</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="signed_in">Signed In</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="btn_sign_out">Sign Out</string>

    <!-- Colors -->
    <string name="light_green">#9ccc65</string>
    <string name="light_red">#e57373</string>

    <!-- Startup Activity -->
    <string name="sign_in">Sign In</string>
    <string name="sts_logo_description">Settle the Score logo</string>
    <string name="startup_warning">* If you do not already have an account, one will automatically be created for you and then you will have to fill in some additional information *</string>

    <!-- Sign In Activity -->
    <string name="sign_in_title">Signing In</string>

    <!-- Register Activity -->
    <string name="register_title">Additional Info</string>
    <string name="register_display_name_label">Display Name: </string>
    <string name="register_display_name_field">Display Name</string>
    <string name="register_full_name_label">Full Name: </string>
    <string name="register_full_name_field">Full Name</string>
    <string name="register_email_label">Email: </string>
    <string name="register_email_field">Email</string>
    <string name="register_phone_number_label">Phone Number: </string>
    <string name="register_phone_number_field">Phone Number</string>
    <string name="register_upload_photo_label">Profile Photo: </string>
    <string name="register_inv_profile_picture_uri">uri</string>
    <string name="register_submit">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Dice Activity-->
    <string name="dice_instructions">Click the dice to roll</string>
    <string name="roll_anything">1 out of anything</string>
    <string name="roll">Roll</string>
    <string name="result_colon">Result:</string>
    <string name="title_activity_dice">dice</string>
    <string name="title_activity_life">life</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="life">Life</string>
    <string name="opponent">Opponent</string>
    <string name="opponent_name">Opponent Name</string>
    <string name="dice">Roll Dice</string>

    <!-- Life Activity -->
    <string name="life_counter">Life Counter</string>

    <!-- Rock/Paper/Scissors Activity -->
    <string name="rps">Rocks Paper Scissors</string>

    <!-- Drawing Straws Activity -->
    <string name="draw_a_straw">Draw a Straw</string>
    <string name="time_left">Time Left:</string>
    <string name="draw_straws">Draw Straws</string>
    <string name="logout">Logout</string>
    <string name="games">Games</string>
    <string name="home">Home</string>
    <string name="title_activity_score_board">Score Board</string>
    <string name="score_board">Score Board</string>
    <string name="game_type">Game type</string>

</resources>
