<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_scores"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/score_board" />

    <item android:title="@string/games">
        <menu>
            <item
                android:id="@+id/nav_dice"
                android:icon="@drawable/dices_home"
                android:title="@string/dice" />
            <item
                android:id="@+id/nav_rps"
                android:icon="@drawable/scissors"
                android:title="@string/rps" />
            <item
                android:id="@+id/nav_life"
                android:icon="@drawable/life_main"
                android:title="@string/life_counter" />
            <item
                android:id="@+id/nav_straws"
                android:icon="@drawable/straws_main"
                android:title="@string/draw_straws" />
        </menu>
    </item>


</menu>
