<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Life">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/player_two_life"
            android:layout_width="80dp"
            android:layout_height="42dp"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/player_one_life"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/life_label_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/life"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="32dp"
            android:text="@string/player_one"
            android:textAllCaps="true"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:text="@string/player_two"
            android:textAllCaps="true"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/player_one_life"
            android:layout_width="80dp"
            android:layout_height="42dp"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/life_label_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/life"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/player_one_life"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/player_one_inc_life"
            android:layout_width="38dp"
            android:layout_height="24dp"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/button_outline"
            android:text="+"
            app:layout_constraintEnd_toStartOf="@+id/player_one_dec_life"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_one_life" />

        <Button
            android:id="@+id/player_one_dec_life"
            android:layout_width="38dp"
            android:layout_height="24dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/button_outline"
            android:text="-"
            app:layout_constraintStart_toEndOf="@+id/player_one_inc_life"
            app:layout_constraintTop_toBottomOf="@+id/player_one_life" />

        <Button
            android:id="@+id/player_two_inc_life"
            android:layout_width="38dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/button_outline"
            android:text="+"
            app:layout_constraintEnd_toStartOf="@+id/player_two_dec_life"
            app:layout_constraintTop_toBottomOf="@+id/player_two_life" />

        <Button
            android:id="@+id/player_two_dec_life"
            android:layout_width="38dp"
            android:layout_height="24dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/button_outline"
            android:text="-"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_two_life" />
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>